--- a/.stickler.yml
+++ b/.stickler.yml
@@ -5,5 +5,6 @@ linters:
     config: './eslint.config'
 files:
   ignore:
+    - 'dist/main.js'
     - 'bower_components/*'
     - 'node_modules/*' 
