--- a/eslint.config
+++ b/eslint.config
@@ -6,7 +6,9 @@
     'no-unused-vars': 0,
     'no-shadow': 0,
     'no-param-reassign': 0,
-    'eol-last': 0
+    'eol-last': 0,
+    'prefer-const': 0,
+    'no-restricted-syntax': 0,
   },
   "env": {
     "browser": true
