Updated linter config

--- a/eslint.config
+++ b/eslint.config
@@ -9,6 +9,7 @@
     'eol-last': 0,
     'prefer-const': 0,
     'no-restricted-syntax': 0,
+    'no-console': 0,
   },
   "env": {
     "browser": true
